# parallel-computing

./: .gitignore  CMakeLists.txt  Makefile  README.md  canny.c  canny.cl
